[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "sendgrid>=6.12.4",
    "streamlit-folium>=0.25.1",
    "streamlit>=1.49.1",
    "requests>=2.32.5",
    "pandas>=2.3.2",
]
